...
          label: 'New section',
        ),

        /// Adding Logout icon item to bottom navigation bar
        BottomNavigationBarItem(
          icon: IconButton(
            key: const Key("logoutButton"),
            onPressed: widget.onLogOut,
            icon: const Icon(Icons.settings_applications_sharp),
          ),
          label: 'Logout',
        ),
      ],
...
